Tests improvement